Fix a crash in debug build due to invalidate weakptr on wrong thread

The WeakPtr was first used on GL thread but invalidated on UI thread. So we
see a crash in debug build.
This CL uses a raw pointer instead of WeakPtr. It is safe to do so as
vr_gl_thread should be destroyed before vr_input_connection.

Bug: 818206
Change-Id: I978df87d74e7823943858d48d0bc2d0947eecb01
Reviewed-on: https://chromium-review.googlesource.com/999824
Reviewed-by: Yash Malik <ymalik@chromium.org>
Commit-Queue: Biao She <bshe@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548958}
Former-commit-id: 8460d1bc090aed56b86845e7f3501a6d38d04f4f