chrome/browser/android/vr/vr_gl_thread.h
@@ -50,7 +50,7 @@ class VrGLThread : public base::android::JavaHandlerThread,
 
   ~VrGLThread() override;
   base::WeakPtr<VrShellGl> GetVrShellGl();
-  void SetInputConnection(base::WeakPtr<VrInputConnection> weak_connection);
+  void SetInputConnection(VrInputConnection* input_connection);
 
   // GlBrowserInterface implementation (GL calling to VrShell).
   void ContentSurfaceCreated(jobject surface,
@@ -140,6 +140,10 @@ class VrGLThread : public base::android::JavaHandlerThread,
   base::WeakPtr<VrShell> weak_vr_shell_;
   base::WeakPtr<BrowserUiInterface> weak_browser_ui_;
   base::WeakPtr<VrInputConnection> weak_input_connection_;
+  // Both VrInputConnection and VrGlThread are owned by VrShell. In VrShell, we
+  // made sure that this input_connection_ is up to date and destroyed after
+  // VrGlThread. So it is safe to use raw pointer here.
+  VrInputConnection* input_connection_;
 
   // This state is used for initializing vr_shell_gl_.
   scoped_refptr<base::SingleThreadTaskRunner> main_thread_task_runner_;
