chrome/browser/android/vr/vr_input_connection.cc
@@ -20,8 +20,7 @@ using base::android::JavaParamRef;
 
 namespace vr {
 
-VrInputConnection::VrInputConnection(content::WebContents* web_contents)
-    : weak_ptr_factory_(this) {
+VrInputConnection::VrInputConnection(content::WebContents* web_contents) {
   DCHECK(web_contents);
   JNIEnv* env = AttachCurrentThread();
   j_object_.Reset(Java_VrInputConnection_create(
@@ -29,10 +28,6 @@ VrInputConnection::VrInputConnection(content::WebContents* web_contents)
 }
 
 VrInputConnection::~VrInputConnection() {}
-
-base::WeakPtr<VrInputConnection> VrInputConnection::GetWeakPtr() {
-  return weak_ptr_factory_.GetWeakPtr();
-}
 
 void VrInputConnection::OnKeyboardEdit(const TextEdits& edits) {
   JNIEnv* env = base::android::AttachCurrentThread();
