chrome/browser/android/vr/vr_input_connection.h
@@ -11,7 +11,6 @@
 #include "base/android/jni_weak_ref.h"
 #include "base/callback.h"
 #include "base/macros.h"
-#include "base/memory/weak_ptr.h"
 #include "chrome/browser/vr/content_input_delegate.h"
 #include "chrome/browser/vr/text_edit_action.h"
 
@@ -26,8 +25,6 @@ class VrInputConnection {
   explicit VrInputConnection(content::WebContents* web_contents);
   ~VrInputConnection();
 
-  base::WeakPtr<VrInputConnection> GetWeakPtr();
-
   void OnKeyboardEdit(const TextEdits& edits);
   void SubmitInput();
   void RequestTextState(TextStateUpdateCallback callback);
@@ -40,8 +37,6 @@ class VrInputConnection {
  private:
   base::android::ScopedJavaGlobalRef<jobject> j_object_;
   std::queue<vr::TextStateUpdateCallback> text_state_update_callbacks_;
-
-  base::WeakPtrFactory<VrInputConnection> weak_ptr_factory_;
 
   DISALLOW_COPY_AND_ASSIGN(VrInputConnection);
 };
